syntax = "proto3";

package org.project_planton.provider.aws.awss3bucket.v1;

import "org/project_planton/provider/aws/awss3bucket/v1/api.proto";
import "org/project_planton/provider/aws/provider.proto";

//aws-s3-bucket stack-input
message AwsS3BucketStackInput {
  //target cloud-resource
  AwsS3Bucket target = 1;
  //provider-config
  org.project_planton.provider.aws.AwsProviderConfig provider_config = 2;
}
