syntax = "proto3";

package org.project_planton.provider.aws.awss3bucket.v1;

//aws-s3-bucket stack outputs
message AwsS3BucketStackOutputs {
  //id (name) of the S3 bucket created on AWS
  string bucket_id = 1;

  //ARN (Amazon Resource Name) of the S3 bucket
  //Format: arn:aws:s3:::bucket-name
  //Used for IAM policies, bucket policies, and cross-account access
  string bucket_arn = 2;

  //AWS region where the bucket is created
  string region = 3;

  //Regional domain name of the S3 bucket
  //Format: bucket-name.s3.region.amazonaws.com
  //Used for accessing bucket via regional endpoint
  string bucket_regional_domain_name = 4;

  //Hosted zone ID for the S3 bucket's region
  //Used for Route53 alias records pointing to S3 bucket
  string hosted_zone_id = 5;
}
